Implemented ProfileContent in AuthController
