# src/main/java/br/com/juliocauan/authentication/controller/AuthController.java
@@ -4,11 +4,14 @@ import org.openapitools.api.AuthApi;
 import org.openapitools.model.JWTResponse;
 import org.openapitools.model.SigninForm;
 import org.openapitools.model.SignupForm;
+import org.openapitools.model.Profile;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.bind.annotation.RestController;
 
 import br.com.juliocauan.authentication.infrastructure.security.service.JwtService;
+import br.com.juliocauan.authentication.infrastructure.security.model.UserPrincipal;
 import jakarta.validation.Valid;
 import lombok.AllArgsConstructor;
 
@@ -31,9 +34,11 @@ public class AuthController implements AuthApi {
   }
 
   @Override
-  public ResponseEntity<String> _profileContent() {
-    // TODO Auto-generated method stub
-    throw new UnsupportedOperationException("Unimplemented method '_profileContent'");
+  public ResponseEntity<Profile> _profileContent() {
+    Profile profile = new Profile();
+    UserPrincipal user = (UserPrincipal) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
+    profile.username(user.getUsername());
+    return ResponseEntity.status(HttpStatus.OK).body(profile);
   }
 
 }
